feat: added paginate and repository details functionality

--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,10 @@ a {
   text-decoration: none;
 }
 
+.btn-active {
+  border: 1px solid var(--white);
+}
+
+.button {
+  border: 1px solid black;
+}
