--- a/src/styles/Pagination.css
+++ b/src/styles/Pagination.css
@@ -42,8 +42,8 @@
 }
 
 @media (max-width: 420px) {
-    .control {
-        width: 100px;
+    #control {
+        width: 50px;
         /* margin-right: 30px; */
         font-size: 0.825rem;
     }
@@ -52,7 +52,17 @@
         padding-block: 5px;
         padding-inline: 10px;
         border-radius: 6px;
+        font-size: 0.825rem;
     }
 
+    .pagination {
+        margin-bottom: 20px;
+    }
+
+    #btn-disabled {
+        width: 50px;
+        /* margin-right: 20px; */
+        background-color: var(--grey);
+    }
    
 }
